--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,23 +14,24 @@ description: A new Bytebank project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  sqflite:
-  path:
-  http:
-  http_interceptor:
-  uuid:
+  cupertino_icons: ^1.0.2
+  sqflite: ^2.2.8+4
+  path: ^1.8.2
+  http: ^0.13.6
+  http_interceptor: ^1.0.2
+  uuid: ^4.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.0
 
 
 # For information on the generic Dart part of this file, see the
